--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,10 @@ theme:
     accent: 'deep orange'
   font:
     text: 'Noto Sans SC'
+  feature:
+    tabs: true
+markdown_extensions:
+  - admonition
 extra:
   social:
     - type: 'facebook'
